--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,3 +1,7 @@
-language node_js
+language: node_js
 node_js:
-  - "node"
+- node
+after_success:
+  - npm run build
+  - npm install -g firebase-tools
+  - firebase deploy --token $FIREBASE_TOKEN --non-interactive
