--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
-- node
-after_success:
+  - "stable"
+cache:
+  directories:
+  - node_modules
+script:
+  - npm test
   - npm run build
-  - npm install -g firebase-tools
-  - firebase deploy --token $FIREBASE_TOKEN --non-interactive
