--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ script:
   - CI=false npm run build
 after_success:
   - npm install -g firebase-tools
-  - firebase deploy --project --teamie-ci-cd --token $FIREBASE_TOKEN --non-interactive
+  - firebase deploy --project teamie-ci-cd --token $FIREBASE_TOKEN --non-interactive
