--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ cache:
   - ~/.cache
 script:
   - npm run test:ci
-  - CI=false npm run build
+  - npm test
+#  - CI=false npm run build
 after_success:
   - npm install -g firebase-tools
   - firebase deploy --project teamie-ci-cd --token $FIREBASE_TOKEN --non-interactive
